--- a/LINE Notify/#Line Notify　ITFFF+While loop.ipynb
+++ b/LINE Notify/#Line Notify　ITFFF+While loop.ipynb
@@ -21,6 +21,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 接續上一部分的溫度爬蟲："
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -34,35 +41,43 @@
     }
    ],
    "source": [
-    "token = 'XXXXXXXX' # 此為個人金鑰\n",
+    "token = '7JbzFRNtXuXXon9ipW8Gm'\n",
     "app_name = 'line'\n",
     "\n",
-    "restart_time = 3600*2\n",
+    "S = 3600*2\n",
     "\n",
     "while True:\n",
-    "    t = []\n",
     "    \n",
-    "    driver = webdriver.Chrome('chromedriver.exe')\n",
-    "    driver.get('https://www.google.com/search?q={}'.format('天氣'))\n",
-    "    html = driver.find_element_by_css_selector(\"*\").get_attribute(\"outerHTML\")\n",
-    "    doc = pq(html)\n",
-    "    \n",
-    "    info=doc('.wob_t')   \n",
+    "    try:\n",
+    "        t = []\n",
     "\n",
-    "    for data in info:\n",
-    "        t.append(doc(data).text())\n",
+    "        driver = webdriver.Chrome('chromedriver.exe')\n",
+    "        driver.get('https://www.google.com/search?q={}'.format('天氣'))\n",
+    "        html = driver.find_element_by_css_selector(\"*\").get_attribute(\"outerHTML\")\n",
+    "        doc = pq(html)\n",
     "\n",
-    "    value1 = t[0]\n",
+    "        info=doc('.wob_t')   \n",
     "\n",
-    "    if t:\n",
-    "        url = 'https://maker.ifttt.com/trigger/{}/with/key/{}?value1={}'.format(app_name, token,\n",
-    "                                                                                    value1)\n",
-    "                                                                                          \n",
-    "        requests.get(url)\n",
-    "        print('成功！')\n",
+    "        for data in info:\n",
+    "            t.append(doc(data).text())\n",
     "\n",
+    "        value1 = t[0]\n",
+    "\n",
+    "        if t:\n",
+    "\n",
+    "            url = 'https://maker.ifttt.com/trigger/{}/with/key/{}?value1={}'.format(app_name, token, value1)                                                                                \n",
+    "            requests.get(url)\n",
+    "            print('成功！')\n",
+    "\n",
+    "\n",
+    "        time.sleep(S)\n",
     "        \n",
-    "    time.sleep(restart_time)"
+    "    except EOFError:\n",
+    "        \n",
+    "        url = 'https://maker.ifttt.com/trigger/{}/with/key/{}?value1={}'.format(app_name, token, '失敗')                                                                                \n",
+    "        requests.get(url)\n",
+    "        \n",
+    "        break"
    ]
   },
   {
