--- a/LINE Notify/#Line Notify　ITFFF+While loop.ipynb
+++ b/LINE Notify/#Line Notify　ITFFF+While loop.ipynb
@@ -31,17 +31,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "成功！\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "token = '7JbzFRNtXuXXon9ipW8Gm'\n",
+    "token = 'XXXXXXXXXXX'\n",
     "app_name = 'line'\n",
     "\n",
     "S = 3600*2\n",
