--- a/Final Project/RNN 進行銷售量預測.ipynb
+++ b/Final Project/RNN 進行銷售量預測.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "※資料預處理、視覺化：透過視覺化瞭解整體數據架構後，我們擬將'shop_id', 'item_id', 'item_category_id','Year','Month'作為x_train，'item_cnt_month'作為y_train。而資料預處理包括填補缺失值、日期格式調整、欄位合併及調整等等。"
+    "※資料預處理、視覺化：透過視覺化瞭解整體數據架構後，我們擬將'shop_id', 'item_id', 'item_category_id','Year','Month','item_price'作為x_train，'item_cnt_month'作為y_train。而資料預處理包括填補缺失值、日期格式調整、欄位合併及調整等等。"
    ]
   },
   {
