--- a/SQLite/#SQLite3　爬蟲串聯資料庫（新增）.ipynb
+++ b/SQLite/#SQLite3　爬蟲串聯資料庫（新增）.ipynb
@@ -110,29 +110,23 @@
     }
    ],
    "source": [
-    "# 引入撰寫爬蟲所需套件\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import sqlite3\n",
     "\n",
-    "#定義資料庫位置\n",
-    "conn = sqlite3.connect('test.db') # ~代表路徑\n",
+    "#資料庫位置\n",
+    "conn = sqlite3.connect('test.db') # 代表路徑\n",
     "c = conn.cursor()\n",
     "\n",
-    "#定義網址\n",
     "url = 'https://tw.buy.yahoo.com/activity/activity950?p=act2-z26-b-180320-channelweather'\n",
     "\n",
-    "#向網址要回網頁原始碼，並透過 BeautifulSoup 解析\n",
     "res = requests.get(url)\n",
     "soup = BeautifulSoup(res.text, 'html.parser')\n",
     "\n",
-    "'''\n",
-    "透過 soup.find_all 找到網頁原始碼中所有 class = \"item yui3-u srp-multi-image\" 的資料，\n",
-    "並一個個透過 .stripped_strings 將其資訊拆開\n",
-    "'''\n",
+    "\n",
     "for asus in soup.find_all(class_='C329B1_img_frame'):\n",
     "    values = list(asus.stripped_strings)\n",
-    "    #不是補貨中的資料才印出\n",
+    "\n",
     "    if '補貨中' not in values:\n",
     "        values.pop(1)\n",
     "        values.pop(1)\n",
@@ -428,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
