--- a/TWstock/#4　K線圖繪製.ipynb
+++ b/TWstock/#4　K線圖繪製.ipynb
@@ -28,23 +28,18 @@
     }
    ],
    "source": [
-    "# basic\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# get data\n",
     "import pandas_datareader as pdr\n",
     "\n",
-    "# visual\n",
     "import matplotlib.pyplot as plt\n",
     "import mpl_finance as mpf\n",
     "%matplotlib inline\n",
     "import seaborn as sns\n",
     "\n",
-    "#time\n",
     "import datetime as datetime\n",
     "\n",
-    "#talib\n",
     "import talib"
    ]
   },
@@ -85,7 +80,7 @@
     "ax.set_xticks(range(0, len(df_2330.index), 10))\n",
     "ax.set_xticklabels(df_2330.index[::10])\n",
     "mpf.candlestick2_ochl(ax, df_2330['Open'], df_2330['Close'], df_2330['High'],\n",
-    "                      df_2330['Low'], width=0.6, colorup='r', colordown='g', alpha=0.75); \n"
+    "                      df_2330['Low'], width=0.6, colorup='r', colordown='g', alpha=0.75)"
    ]
   },
   {
