--- a/TWstock/#6　效率前緣.ipynb
+++ b/TWstock/#6　效率前緣.ipynb
@@ -16,6 +16,7 @@
     "import numpy as np\n",
     "import pandas_datareader.data as web\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from scipy.optimize import minimize"
    ]
   },
@@ -95,6 +96,8 @@
     }
    ],
    "source": [
+    "#由上圖可看出MNST報酬波動較大\n",
+    "\n",
     "print(returns.mean()*252)\n",
     "print(returns.cov()*252)   #一年之中交易日通常有252天"
    ]
